# frackture

./: .flake8  .gitignore  BENCHMARK_SUITE_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DATASET_REPOSITORY.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  TESTING_CHECKLIST.md  TEST_REPORT.md  TEST_SUMMARY.md  check_results.py  compressed.json  decrypted_vector.txt  encrypted.json  fingerprint.txt  frackture (2).py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  test.yml
.hypothesis/examples/04e6b3400353b141/: 0015dfa74a496abd  15a377d4e66a5102  30263f1c20cb02b3  6d634224cc9f7dde  704ebb3fd60851b0  ad26f19a16cc4256  ba8c648678941061  c809e9785eb40387  ee38341d1d92e217
analysis/: insights.json  report.md
benchmarks/: README.md  __init__.py  analyze_results.py  benchmark_frackture.py  dataset_cli.py  dataset_repository.py
benchmarks/datasets/: README.md  __init__.py  generate_samples.py  manifest.yaml  sample_code.js  sample_data.csv  sample_data.json  sample_database.db  sample_minified.min.js  sample_module.py  sample_pickle.pkl  sample_text.txt
benchmarks/results/: benchmark_results_20251213_171939.json  benchmark_results_20251213_171939.md  benchmark_results_20251214_034553.json  benchmark_results_20251214_034553.md  benchmark_results_20251214_034602.json  benchmark_results_20251214_034602.md  benchmark_results_20251214_034613.json  benchmark_results_20251214_034613.md  benchmark_results_20251214_034633.json  benchmark_results_20251214_034633.md  benchmark_results_20251215_063946.json  benchmark_results_20251215_063946.md  benchmark_results_20251215_100040.json  benchmark_results_20251215_100040.md  benchmark_results_20251215_100704.json  benchmark_results_20251215_100704.md  benchmark_results_20251215_102411.json  benchmark_results_20251215_102411.md  benchmark_results_20251215_102604.json  benchmark_results_20251215_102604.md  benchmark_results_20251215_102813.json  benchmark_results_20251215_102813.md  benchmark_results_20251215_103006.json  benchmark_results_20251215_103006.md
docs/: ARCHITECTURE.md  BENCHMARKING.md  EXAMPLES.md  FAQ.md  Limitations.md  README.md  SECURITY.md  USE_CASES.md  benchmark_runbook.md  improvement_roadmap.md
frackture/: __init__.py  __main__.py  cli.py  engine.py  entropy.py  models.py  preprocess.py  symbolic.py
src/frackture/: __init__.py  __main__.py  core.py  version.py
test_results/: benchmark_results_20251215_082049.json  benchmark_results_20251215_082049.md
tests/: __init__.py  conftest.py  test_basic.py  test_benchmark_analysis.py  test_compact_payload.py  test_comprehensive.py  test_compress_api.py  test_core.py  test_dataset_repository.py  test_encryption.py  test_entropy_channel.py  test_failure_paths.py  test_hashing.py  test_integration.py  test_optimization.py  test_optimizer.py  test_preprocessing.py  test_roundtrip.py  test_symbolic_fingerprint.py  test_verification.py
