[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "frackture"
dynamic = ["version"]
description = "Symbolic compression engine using recursive logic and entropy signatures"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gregory Betti", email = "gregory@frackture.io"}
]
maintainers = [
    {name = "Gregory Betti", email = "gregory@frackture.io"}
]
keywords = [
    "compression",
    "symbolic",
    "fingerprinting",
    "entropy",
    "hashing",
    "encoding",
    "data-science",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]
benchmark = [
    "brotli>=1.0.0",
    "psutil>=5.9.0"
]
all = [
    "frackture[dev,benchmark]"
]

[project.urls]
Homepage = "https://github.com/GoryGrey/frackture"
Documentation = "https://github.com/GoryGrey/frackture#readme"
Repository = "https://github.com/GoryGrey/frackture"
Issues = "https://github.com/GoryGrey/frackture/issues"

[project.scripts]
frackture = "frackture.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["frackture*"]

[tool.setuptools-scm]
version_file = "src/frackture/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=frackture",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--hypothesis-show-statistics"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property_based: marks tests as property-based tests",
    "adversarial: marks tests using adversarial inputs"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/benchmarks/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
    "N802",  # function name should be lowercase (we have some camelCase legacy)
    "N806",  # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["N802", "N806"]  # allow non-lowercase names in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
